# RED-V_Board_-Risc_V-_Zephyr

./: .gitignore  README.md  SECURITY_AND_SAFETY.md  SENSOR_DRIVERS.md
ShoeVisualizer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ShoeVisualizer.csproj
ShoeVisualizer/Models/: sneakers.mtl
app/: CMakeLists.txt  README.md  prj.conf
app/boards/: hifive1_revb.overlay
app/src/: bno085_task.c  bno085_task.h  main.c
app_advanced/: CMakeLists.txt  prj.conf
app_advanced/boards/: hifive1_revb.overlay
app_advanced/src/: main.c
